# qwen3-tts.cpp

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  Qwen3-TTS-12Hz-0.6B-Base.md  Qwen3-TTS-12Hz-0.6B-CustomVoice.md  Qwen3-TTS-12Hz-1.7B-Base.md  Qwen3-TTS-12Hz-1.7B-CustomVoice.md  Qwen3-TTS-12Hz-1.7B-VoiceDesign.md  Qwen3-TTS-Tokenizer-12Hz.md  README.md  add_flash_output.md  imgui.ini  qwen3_tts.cpp  stream_implementation.md  测试指令.txt
.sisyphus/plans/: gui-enhancements.md
include/: qwen3_tts.h  qwen3tts_c_api.h
scripts/: build.py  compare_tokenizers.py  convert_tokenizer_to_gguf.py  convert_tts_to_gguf.py  convert_tts_to_gguf_v2.py  debug_dollar_tokenize.py  debug_pretokenize.py  gen_pretokenize_ref.py  ref_tokens.py  setup_pipeline_models.py  tokenize_text8_ref.py  verify_pretokenize.py
src/: audio_tokenizer_encoder.cpp  qwen3_tts.cpp
src/api/: qwen3tts_c_api.cpp
src/app/: gui_main.cpp  main.cpp
src/audio/: audio_codec_encoder.cpp  audio_codec_encoder.h  audio_tokenizer_decoder.cpp  audio_tokenizer_decoder.h  audio_tokenizer_encoder.cpp  audio_tokenizer_encoder.h
src/core/: gguf_loader.cpp  gguf_loader.h  text_tokenizer.cpp  text_tokenizer.h  tts_transformer.cpp  tts_transformer.h
test_txt/: test1.txt  test2.txt  test3.txt
tests/: debug_tokenize_dollar.cpp  test_number_tokenize.cpp  test_text8_tokenize.cpp  test_tokenizer.cpp
text/: test2.txt  test4.txt  test5.txt  test6.txt  test7.txt  text8.txt
text/instructs/: boy.txt  girl.txt  man.txt  teen.txt  woman.txt
